--- a/package.json
+++ b/package.json
@@ -2,17 +2,34 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-option-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "npm run production",
         "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.5.0",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^1.0.0",
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.32",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.0",
         "vite": "^5.0.0",
-        "vue": "^3.2.37"
+        "vue": "^3.2.37",
+        "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "flowbite": "^2.2.1",
+        "pinia": "^2.1.7",
+        "pinia-plugin-persistedstate": "^3.2.1",
+        "sweetalert2": "^11.10.2",
+        "vue-router": "^4.2.5"
     }
 }
