--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
         "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-option-poll=1000",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "npm run production",
-        "build": "vite build"
+        "production": "mix --production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-vue": "^4.5.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "bootstrap": "^5.2.3",
@@ -21,7 +19,6 @@
         "postcss": "^8.4.32",
         "sass": "^1.56.1",
         "tailwindcss": "^3.4.0",
-        "vite": "^5.0.0",
         "vue": "^3.2.37",
         "vue-loader": "^16.2.0"
     },
